Avoid screen flickering due to theme switching during page loading

--- a/lib/livellama_web/components/layouts/root.html.heex
+++ b/lib/livellama_web/components/layouts/root.html.heex
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="[scrollbar-gutter:stable]">
   <head>
+    <script>
+      function setTheme(theme) {
+        const isDark = theme === "system" && window.matchMedia("(prefers-color-scheme: dark)").matches || theme === "dark"
+        document.documentElement.classList.toggle("dark", isDark)
+        return isDark ? "dark" : "light"
+      }
+      setTheme(localStorage.theme || "system")
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
